# rhood-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.toml.example  justfile  release-plz.toml
.github/workflows/: pull-request-validation.yml  release-binaries.yaml  release-plz.yml
crates/rhood-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/rhood-cli/src/: main.rs  output.rs
crates/rhood-cli/src/commands/: account.rs  futures.rs  index.rs  login.rs  market.rs  mod.rs  option.rs  order.rs  recurring.rs  stock.rs  watchlist.rs
crates/rhood-cli/src/utils/: validation.rs
crates/rhood-cli/tests/integration/: account.rs  common.rs  documents.rs  futures.rs  income.rs  indexes.rs  main.rs  market.rs  options.rs  orders.rs  recurring.rs  stocks.rs  watchlists.rs
crates/rhood-core/: CHANGELOG.md  Cargo.toml  README.md
crates/rhood-core/src/: api.rs  config.rs  env.rs  error.rs  lib.rs  pagination.rs  resolver_cache.rs  util.rs
crates/rhood-core/src/auth/: auth_state.rs  mod.rs  token_cache.rs
crates/rhood-core/src/client/: auth.rs  device_verification.rs  mod.rs  transport.rs
crates/rhood-core/src/endpoints/: account.rs  dividends.rs  documents.rs  futures.rs  markets.rs  mod.rs  options.rs  orders.rs  recurring.rs  research.rs  stocks.rs  test_support.rs  transfers.rs  user.rs  watchlists.rs
crates/rhood-core/src/models/: account.rs  auth.rs  dividend.rs  document.rs  futures.rs  market.rs  mod.rs  option.rs  order.rs  recurring.rs  research.rs  stock.rs  transfer.rs  user.rs  watchlist.rs
crates/rhood-core/tests/: concurrency.rs  integration.rs  timeout.rs
crates/rhood-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/rhood-mcp/src/: config.rs  http.rs  main.rs  shared.rs  stdio.rs
crates/rhood-mcp/src/middleware/: cors.rs  static_bearer_auth.rs
crates/rhood-mcp/src/oauth/: consent.html  endpoints.rs  mod.rs  model.rs  store.rs  tests.rs
crates/rhood-mcp/src/tools/: account_tools.rs  enrichment.rs  futures_tools.rs  handler.rs  income_tools.rs  index_tools.rs  instructions.md  market_tools.rs  mod.rs  option_tools.rs  order_tools.rs  params.rs  recurring_tools.rs  research_tools.rs  schema.rs  server.rs  stock_tools.rs  types.rs  user_tools.rs  watchlist_tools.rs
docs/superpowers/plans/: 2026-06-09-homebrew-cargo-distribution.md
docs/superpowers/specs/: 2026-06-09-homebrew-cargo-distribution-design.md
