[package]
name = "rhood-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Terminal CLI for the Robinhood trading API"
readme = "README.md"
keywords = ["robinhood", "trading", "cli", "stocks"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "rhood"
path = "src/main.rs"

[dependencies]
rhood-core = { workspace = true, features = ["clap"] }
secrecy.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
dialoguer = "0.12.0"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"

[[test]]
name = "integration"
path = "tests/integration/main.rs"
