[package]
name = "rhood-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Async Rust client library for the Robinhood trading API"
readme = "README.md"
keywords = ["robinhood", "trading", "finance", "stocks"]
categories = ["api-bindings", "finance"]

[features]
clap = ["dep:clap"]
schemars = ["dep:schemars"]
# test-helpers exposes `inject_test_auth` which bypasses OAuth.
# NEVER enable this feature in production builds or published binaries.
test-helpers = []

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
schemars = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
secrecy.workspace = true
totp-rs.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
toml.workspace = true
moka.workspace = true
futures.workspace = true
rust_decimal = { workspace = true }

[dev-dependencies]
wiremock = "0.6.5"
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.27.0"

[[test]]
name = "concurrency"
path = "tests/concurrency.rs"
required-features = ["test-helpers"]

[[test]]
name = "timeout"
path = "tests/timeout.rs"
required-features = ["test-helpers"]
