[package]
name = "rhood-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Model Context Protocol server exposing the Robinhood API to LLM clients"
readme = "README.md"
keywords = ["robinhood", "mcp", "trading", "llm", "stocks"]
categories = ["api-bindings", "finance"]

[[bin]]
name = "rhood-mcp"
path = "src/main.rs"

[dependencies]
rhood-core = { workspace = true, features = ["clap", "schemars"] }
chrono.workspace = true
secrecy.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
rmcp = { version = "1.7.0", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
schemars.workspace = true
uuid.workspace = true
axum = { version = "0.8.9", features = ["http1", "tokio"] }
tokio-util = "0.7.18"
subtle = "2.6.1"
sha2 = "0.11.0"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
tower-http = { version = "0.6.11", features = ["cors"] }

[dev-dependencies]
tower = "0.5.3"
url = "2.5.8"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ name }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
